Layout Issues Fix

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -17,12 +17,11 @@ body {
 }
 
 .menubar {
-  padding: 0.75rem;
+  padding: 0.65rem;
   background: rgba(220, 38, 38, 0.1);
   color: rgba(220, 38, 38, 1);
   border: none;
   border-radius: 8px;
-  box-shadow: 0 1px 13px rgba(0, 0, 0, 0.2);
 }
 
 .menubar-title {
